# technical-interview-apprentices-main

./: .gitignore  README.md
school-management/: Makefile  README.md  pyproject.toml
school-management/src/school_management/computations/: statistics.py
school-management/src/school_management/models/: school.py
school-management/tests/: conftest.py
school-management/tests/computations/: test_statistics.py  test_statistics.py:Zone.Identifier
