[tool.poetry]
name = "school-management"
version = "0.1.0"
description = ""
authors = ["Amine El Ouassouli <a.elouassouli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
